--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -367,4 +367,8 @@ textarea {
     color: #000;
     padding: 0.2em 0;
 }
-
+/* 字体样式 */
+html {
+    font-size: 14px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
